# Homework-API

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/homework_api/: __init__.py  basemodels.py  db_operations.py  error_response.py  main.py  utils.py
src/homework_api/database/: __init__.py  database_manager.py
src/homework_api/routers/: __init__.py  classroom.py  homework.py
