[project]
name = "homework-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "B_K", email = "chayanongg2550@gmail.com" }
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
    "databases[sqlite]>=0.8.0",
    "MarkupSafe>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
